# jus-rs

./: Cargo.toml  README.md
benches/: validate.rs
crates/jus-lsp/: Cargo.toml
crates/jus-lsp/src/: main.rs
crates/jus-rs/: Cargo.toml
crates/jus-rs/benches/: compile.rs
crates/jus-rs/data/schema/: bad_formatting.jus  test.jus
crates/jus-rs/src/: lib.rs
crates/jus-rs/src/compiler/: mod.rs  validator.rs
crates/jus-rs/src/fmt/: mod.rs
crates/jus-rs/src/parser/: lexer.rs  mod.rs
data/schema/: address.jus  simple.jus
samples/: nested.jus
src/: lib.rs  types.rs
src/compiler/: mod.rs  validator.rs
src/parser/: lexer.rs  mod.rs
