[package]
name = "jus-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
nom = "7.1.3"
serde_json = "1.0.128"
thiserror = "1.0.64"
clap = { version = "4.5.13", features = ["derive"], optional = true }
nom_locate = "4.2.0"

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "jus"
path = "bin/jus.rs"
required-features = ["cli"]

[[bench]]
name = "compile"
harness = false

[[bench]]
name = "validate"
harness = false

[features]
cli = ["clap/derive"]
